minikube.conf.d/web-service.yaml
# This configuration file creates a Kubernetes Service that exposes on port 80
# the services of every pod with label "app" set as "nginx".
# This way if the nginx pods replicate or restart the service endpoint
# remains the same.
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
